# shakespearean-pokedex-api

./: README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: main.rs  pokedex.rs  tests.rs
api/src/pokedex/: actions.rs  routes.rs  types.rs
