[package]
name = "pokemon-api"
version = "0.1.0"
authors = ["darkeyz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.114"
serde_json = "1.0.55"
serde_derive = "1.0.114"
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
tokio = { version = "0.2.21", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
